--- a/src/juicy-toggle-icon-button.html
+++ b/src/juicy-toggle-icon-button.html
@@ -2,7 +2,7 @@
 
 <dom-module id="juicy-toggle-icon-button">
     <template>
-        <link href="css/jte-fontawesome.css" rel="stylesheet" />
+        <style include="juicy-tile-editor-font"></style>
         <style>
             :host {
                 display: inline-block;
