--- a/src/juicy-tile-editor-form.html
+++ b/src/juicy-tile-editor-form.html
@@ -541,7 +541,7 @@
                             <span style$="{{getOutlineStyle(outline)}}"></span>
                         </button>
                         <div class="expandable">
-                            <juicy-border-picker value="{{outline::change}}" on-change="applyChange"></juicy-border-picker>
+                            <juicy-border-picker border-value="{{outline::change}}" on-change="applyChange"></juicy-border-picker>
                         </div>
                     </juicy-popover>
                     <label class="toolbar-label">Outline</label>
