Fix tight checkbox

--- a/src/juicy-tile-editor-form.html
+++ b/src/juicy-tile-editor-form.html
@@ -447,7 +447,7 @@
                 </div>
 
                 <div class="toolbar-item" disabled$="{{!isContainer}}" data-applyvalue="tightGroup">
-                    <label class="editable"><input id="tightGroupCheckbox" type="checkbox" data-applyvalue="tightGroup" data-hardrefresh="true" checked="{{tightGroup}}"> tight</label>
+                    <label class="editable"><input id="tightGroupCheckbox" type="checkbox" data-applyvalue="tightGroup" data-hardrefresh="true" checked="{{tightGroup::change}}"> tight</label>
                 </div>
             </div>
 
