--- a/src/juicy-tile-editor.html
+++ b/src/juicy-tile-editor.html
@@ -1,3 +1,8 @@
+<!--
+    juicy-tile-editor
+    @version: 1.0.1
+    MIT
+-->
 ﻿<link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../../juicy-highlight/src/juicy-highlight.html">
 <link rel="import" href="juicy-tile-editor-font.html">
