--- a/src/juicy-tile-editor.html
+++ b/src/juicy-tile-editor.html
@@ -5,10 +5,10 @@
 -->
 ﻿<link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../../juicy-highlight/src/juicy-highlight.html">
+<link rel="import" href="../../juicy-draggable/juicy-draggable.html" />
 <link rel="import" href="juicy-tile-editor-font.html">
 <link rel="import" href="juicy-tile-editor-form.html">
 <link rel="import" href="juicy-tile-tree.html">
-<link rel="import" href="juicy-draggable.html" />
 <link rel="import" href="juicy-resizable.html" />
 
 <dom-module is="juicy-tile-editor">
