--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </juicy-tile-list>
         </template>
         <script type="text/javascript">
-            model = {
+            var model = {
                 editingMode: true,
                 setup: {
                     gutter: 16,
