Convert nodeList into array
https://github.com/Juicy/juicy-tile-editor/issues/98

--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -207,7 +207,7 @@
                 attached: function () {
                     this.set("mediaScreen", this.mediaScreenRanges[this.mediaScreenRanges.length - 1]);
 
-                    var lists = document.querySelectorAll(this.tileListSelector);
+                    var lists = Array.prototype.slice.call(document.querySelectorAll(this.tileListSelector));
 
                     this.set("tileLists", lists);
                     this.attachEventListeners();
